--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -128,4 +128,7 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Title/TitleMap.TitleMap
+GameDefaultMap=/Game/Title/TitleMap.TitleMap
 
